initial plugin code and schemas
